Sprint 6 внесены правки