@@ -4,7 +4,6 @@ import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
-import java.util.Arrays;
 import java.util.List;
 import static org.junit.Assert.assertEquals;
 import static org.mockito.Mockito.when;
@@ -24,7 +23,7 @@ public class CatTest {
     @Test
     public void testGetFood() throws Exception {
      Cat cat = new Cat(feline);
-        List<String> expectedFood = Arrays.asList("Животные", "Птицы", "Рыба");
+        List<String> expectedFood = List.of("Животные", "Птицы", "Рыба");
         when(feline.eatMeat()).thenReturn(expectedFood);
         assertEquals(expectedFood, cat.getFood());
     }
